# flower

examples/rust-server/: Dockerfile.client  Dockerfile.driver  compose.yml  justfile
examples/rust-server/client-code/: client.py  requirements.txt
examples/rust-server/config/: grafana.ini  prometheus.yml
examples/rust-server/config/dashboards/: dashboard_index.json  dashboards.yml
examples/rust-server/config/datasources/: prometheus-datasource.yml
examples/rust-server/driver-code/: driver.py  requirements.txt
src/: .dockerignore  justfile
src/docker/superlink/: Dockerfile
src/docker/superlink-migration/: Dockerfile
src/rust/: Cargo.toml  README.md  build.rs  dev.yaml
src/rust/src/: README.md  auth.rs  config.rs  handler.rs  lib.rs  model.rs  server.rs  service.rs  services.rs  state.rs  tracer.rs  tracing.rs
src/rust/src/auth/: bearer_token.rs  noop.rs  unauthorized.rs
src/rust/src/handler/: common.rs  driver.rs  fleet.rs
src/rust/src/middleware/: metrics.rs
src/rust/src/model/: handler.rs  state.rs
src/rust/src/service/: common.rs  convertion.rs  driver.rs  fleet.rs
src/rust/src/services/: common.rs  driver.rs  fleet.rs
src/rust/src/state/: migration.rs  models.rs  postgres.rs  schema.rs
src/rust/src/state/migrations/: 20231125224846_init.sql  V0000__init.sql
